--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-PGSQL_HOST=localhost
 PGSQL_USER= root
-PGSQL_PASSWORD= root
-PGSQL_DATABASE= hive_flask
+PGSQL_PASSWORD= pass
+PGSQL_DATABASE= hospital
 PGSQL_PORT=5432
 PYTHON_PORT=85
 SECRET_KEY=social
